
This is the changelog for Calamares. For each release, the major changes and
contributors are listed. Note that Calamares does not have a historical
changelog -- this log starts with version 3.3.0. See CHANGES-3.2 for
the history of the 3.2 series (2018-05 - 2022-08).

# 3.3.5 (2024-03-03)

This release contains contributions from (alphabetically by first name):
 - Adriaan de Groot
 - Evan James

## Core ##
 - Calamares logs more information about how the executable was created
   in the session log on startup. This will help in recreating the specific
   configuration when bug reports are filed. (thanks Evan)
 - The debug window now has better Qt6 compatibility.

## Modules ##
 - *displaymanager* module can configure an alternate SDDM configuration file.
 - *networkcfg* a bug affecting NetPlan + NetworkManager was fixed.


# 3.3.4 (2024-02-27)

In this release, process jobmodules -- a particular kind of module
recognizable by `type: job` and `interface: process` in the descriptor
file -- undergo a large change to resemble *shellprocess* more.

Users of process jobmodules are encouraged to double-check the Functionality
of those modules in this release.

This release contains contributions from (alphabetically by first name):
 - Adriaan de Groot
 - Victor Fuentes

## Core ##
 - Process jobs (a job type provided by Calamares core) now share more
   code with *contextualprocess* and *shellprocess* jobs. The execution
   mechanism is the same, and always invokes the shell, whether the command
   runs in the host or in the target system. It is no longer necessary to
   add `/bin/sh` in the *command* key -- this is always present.

## Modules ##
 - *contextualprocess* and *shellprocess* can now set environment variables
   as part of the configuration. See *shellprocess* documentation for details.
   This is optional, and does not do anything that could not already be done
   by putting `export VAR=value ;` in front of the command before.