@@ -12,6 +12,7 @@ the history of the 3.2 series (2018-05 - 2022-08).
 This release contains contributions from (alphabetically by first name):
  - Adriaan de Groot
  - Evan James
+ - Peter Jung
 
 ## Core ##
  - Calamares logs more information about how the executable was created
@@ -22,6 +23,7 @@ This release contains contributions from (alphabetically by first name):
 ## Modules ##
  - *displaymanager* module can configure an alternate SDDM configuration file.
  - *networkcfg* a bug affecting NetPlan + NetworkManager was fixed.
+ - *initcpiocfg* Add microcode hook to initcpiocfg
 
 
 # 3.3.4 (2024-02-27)
